src/templates/masonry/css/masonry.css
/* Base styles */
.fg-masonry * {
	box-sizing: border-box;
}
.foogallery.fg-masonry {
	margin: 0 auto;
	text-align: center;
}
.fg-masonry .fg-thumb {
	display: block;
}
.fg-masonry.fg-fixed .fg-item,
.fg-masonry.fg-fixed .fg-image,
.fg-masonry.fg-fixed .fg-column-width {
	max-width: 100%;
}

.fg-masonry .fg-column-width {
	display: inline-block;
	border: solid 0 transparent;
}
.fg-masonry .fg-column-width,
.fg-masonry .fg-gutter-width {
	position: absolute;
	height: 0;
	visibility: hidden;
	opacity: 0;
	pointer-events: none;
}

.fg-masonry.fg-col6 .fg-image,
.fg-masonry.fg-col5 .fg-image,
.fg-masonry.fg-col4 .fg-image,
.fg-masonry.fg-col3 .fg-image,
.fg-masonry.fg-col2 .fg-image {
	width: 100%;
	height: auto;
	max-width: 100%;
}

.fg-masonry .fg-item {
	line-height: 0;
	font-size: 0;
	vertical-align: top;
}

/* 2 column layouts */
/* 2 column layout - normal gutter */
.fg-masonry.fg-col2 .fg-item { margin-bottom: 1%; width: 49.5%; }
.fg-masonry.fg-col2 .fg-column-width { width: 49.5%; }
.fg-masonry.fg-col2 .fg-gutter-width { width: 1%; }

/* 2 column layout - no gutter */
.fg-masonry.fg-col2.fg-gutter-none .fg-item { margin-bottom: 0; width: 50%; }
.fg-masonry.fg-col2.fg-gutter-none .fg-column-width { width: 50%; }
.fg-masonry.fg-col2.fg-gutter-none .fg-gutter-width { width: 0; }

/* 2 column layout - large gutter */
.fg-masonry.fg-col2.fg-gutter-large .fg-item { margin-bottom: 3%; width: 48.5%; }
.fg-masonry.fg-col2.fg-gutter-large .fg-column-width { width: 48.5%; }
.fg-masonry.fg-col2.fg-gutter-large .fg-gutter-width { width: 3%; }

/* 3 column layouts */
/* 3 column layout - normal gutter */
.fg-masonry.fg-col3 .fg-item { margin-bottom: 1%; width: 32.66%; }
.fg-masonry.fg-col3 .fg-column-width { width: 32.66%; }
.fg-masonry.fg-col3 .fg-gutter-width { width: 1%; }

/* 3 column layout - no gutter */
.fg-masonry.fg-col3.fg-gutter-none .fg-item { margin-bottom: 0; width: 33.33%; }
.fg-masonry.fg-col3.fg-gutter-none .fg-column-width { width: 33.33%; }
.fg-masonry.fg-col3.fg-gutter-none .fg-gutter-width { width: 0; }

/* 3 column layout - large gutter */
.fg-masonry.fg-col3.fg-gutter-large .fg-item { margin-bottom: 3%; width: 31.33%; }
.fg-masonry.fg-col3.fg-gutter-large .fg-column-width { width: 31.33%; }
.fg-masonry.fg-col3.fg-gutter-large .fg-gutter-width { width: 3%; }

/* 4 column layouts */
/* 4 column layout - normal gutter */
.fg-masonry.fg-col4 .fg-item { margin-bottom: 1%; width: 24.25%; }
.fg-masonry.fg-col4 .fg-column-width { width: 24.25%; }
.fg-masonry.fg-col4 .fg-gutter-width { width: 1%; }

/* 4 column layout - no gutter */
.fg-masonry.fg-col4.fg-gutter-none .fg-item { margin-bottom: 0; width: 25%; }
.fg-masonry.fg-col4.fg-gutter-none .fg-column-width { width: 25%; }
.fg-masonry.fg-col4.fg-gutter-none .fg-gutter-width { width: 0; }

/* 4 column layout - large gutter */
.fg-masonry.fg-col4.fg-gutter-large .fg-item { margin-bottom: 3%; width: 22.75%; }
.fg-masonry.fg-col4.fg-gutter-large .fg-column-width { width: 22.75%; }
.fg-masonry.fg-col4.fg-gutter-large .fg-gutter-width { width: 3%; }

/* 5 column layouts */
/* 5 column layout - normal gutter */
.fg-masonry.fg-col5 .fg-item { margin-bottom: 1%; width: 19.2%; }
.fg-masonry.fg-col5 .fg-column-width { width: 19.2%; }
.fg-masonry.fg-col5 .fg-gutter-width { width: 1%; }

/* 5 column layout - no gutter */
.fg-masonry.fg-col5.fg-gutter-none .fg-item { margin-bottom: 0; width: 20%; }
.fg-masonry.fg-col5.fg-gutter-none .fg-column-width { width: 20%; }
.fg-masonry.fg-col5.fg-gutter-none .fg-gutter-width { width: 0; }

/* 5 column layout - large gutter */
.fg-masonry.fg-col5.fg-gutter-large .fg-item { margin-bottom: 3%; width: 17.6%; }
.fg-masonry.fg-col5.fg-gutter-large .fg-column-width { width: 17.6%; }
.fg-masonry.fg-col5.fg-gutter-large .fg-gutter-width { width: 3%; }

/* 6 column layouts */
/* 6 column layout - normal gutter */
.fg-masonry.fg-col6 .fg-item { margin-bottom: 1%; width: 15.83%; }
.fg-masonry.fg-col6 .fg-column-width { width: 15.83%; }
.fg-masonry.fg-col6 .fg-gutter-width { width: 1%; }

/* 6 column layout - no gutter */
.fg-masonry.fg-col6.fg-gutter-none .fg-item { margin-bottom: 0; width: 16.66%; }
.fg-masonry.fg-col6.fg-gutter-none .fg-column-width { width: 16.66%; }
.fg-masonry.fg-col6.fg-gutter-none .fg-gutter-width { width: 0; }

/* 6 column layout - large gutter */
.fg-masonry.fg-col6.fg-gutter-large .fg-item { margin-bottom: 3%; width: 14.16%; }
.fg-masonry.fg-col6.fg-gutter-large .fg-column-width { width: 14.16%; }
.fg-masonry.fg-col6.fg-gutter-large .fg-gutter-width { width: 3%; }

/* Force 5 column layout < 1280px */
@media screen and (max-width: 1280px) {
	/* default gutter */
	.fg-masonry.fg-col6 .fg-item { margin-bottom: 1%; width: 19.2%; }
	.fg-masonry.fg-col6 .fg-column-width { width: 19.2%; }
	.fg-masonry.fg-col6 .fg-gutter-width { width: 1%; }

	/* no gutter */
	.fg-masonry.fg-col6.fg-gutter-none .fg-item { margin-bottom: 0; width: 20%; }
	.fg-masonry.fg-col6.fg-gutter-none .fg-column-width { width: 20%; }
	.fg-masonry.fg-col6.fg-gutter-none .fg-gutter-width { width: 0; }

	/* large gutter */
	.fg-masonry.fg-col6.fg-gutter-large .fg-item { margin-bottom: 3%; width: 17.6%; }
	.fg-masonry.fg-col6.fg-gutter-large .fg-column-width { width: 17.6%; }
	.fg-masonry.fg-col6.fg-gutter-large .fg-gutter-width { width: 3%; }
}
/* ... */

